Editor button alignment issues

--- a/themes/grav/scss/preset.scss
+++ b/themes/grav/scss/preset.scss
@@ -908,7 +908,6 @@ form {
                 background: darken($content-bg, 3%);
                 color: $form-field-text;
                 border-top: 1px solid $form-border;
-                border-bottom: 1px solid $form-border;
             }
         }
 
