--- a/themes/grav/scss/template/_editor.scss
+++ b/themes/grav/scss/template/_editor.scss
@@ -71,9 +71,6 @@
                 border-top-left-radius: 4px;
             }
             display: inline-block;
-            &.button-group {
-                margin-top: -3px;
-            }
         }
 
         a {
